--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="container">
-    <!-- 用户登录测试 -->
+    <!-- 用户登录测试 
     <view class="userinfo">
         <image
             class="userinfo-avatar"
@@ -11,10 +11,10 @@
             <button class="userinfo-nickname" wx:if="{{!logged}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">点击测试登录接口</button>
             <text class="userinfo-nickname" wx:else>{{userInfo.nickName}}</text>
         </view>
-    </view>
+    </view>-->
 
 
-    <!-- 上传图片测试 -->
+    <!-- 上传图片测试 
     <view class="uploader">
         <view class="uploader-text" bindtap="doUpload">
             <text>上传图片</text>
@@ -27,13 +27,13 @@
                 bindtap="previewImg"
             ></image>
         </view>
-    </view>
+    </view>-->
 
 
-    <!-- 上传图片测试 -->
+    <!-- 上传图片测试
     <view class="uploader">
         <navigator url="../addCgi/addCgi" open-type="navigate" class="uploader-text">
             <text>快速增加 CGI</text>
         </navigator>
-    </view>
+    </view> -->
 </view>
